# fast-table-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  codigo_completo.txt  codigo_completo_v2.txt  create_superuser.py  database.db  log_precios.txt  pyproject.toml  start.sh
.github/workflows/: ci.yml
app/: auth.py  config.py  database.py  main.py  models.py
app/api/: dependencies.py
app/api/v1/: api.py  category.py  dish.py  orders.py  reservations.py  users.py  ws_notifications.py
app/core/: config.py  email.py
app/crud/: categories.py  dish.py  order.py
app/db/: session.py
app/models/: category.py  dish.py  enums.py  order.py  reservation.py  user.py
app/routers/: categories.py  items.py  users.py
app/schemas/: category.py  dish.py  order.py  reservation.py  responses.py  user.py
app/services/: websocket_manager.py
migrations/: env.py
migrations/versions/: 5068c5ab8337_init_con_uuids.py  5802b16d360a_categories_added.py  9ddf22a2c598_category_column_descrption_corrected_to_.py  ab021acb864d_add_role_to_user_with_default.py
tests/: conftest.py  test_items.py  test_menu.py  test_orders.py  test_reservations.py  test_users.py
